--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/core": "^3.18.0",
     "@tiptap/extension-blockquote": "^3.18.0",
     "@tiptap/extension-bullet-list": "^3.18.0",
     "@tiptap/extension-code-block": "^3.18.0",
@@ -29,6 +30,7 @@
     "@tiptap/pm": "^3.18.0",
     "@tiptap/react": "^3.18.0",
     "@tiptap/starter-kit": "^3.18.0",
+    "@tiptap/suggestion": "^3.18.0",
     "axios": "^1.13.4",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
