--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,4 @@
 [build.environment]
   NPM_CONFIG_IGNORE_SCRIPTS = "true"
   command = "yarn install --frozen-lockfile && yarn build"
+  publish = "dist"
