--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,8 @@
   NPM_CONFIG_IGNORE_SCRIPTS = "true"
   command = "yarn install --frozen-lockfile && yarn build"
   publish = "dist"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
