--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@mantine/tiptap": "^8.3.14",
@@ -32,18 +33,21 @@
     "@tiptap/starter-kit": "^3.18.0",
     "@tiptap/suggestion": "^3.18.0",
     "axios": "^1.13.4",
+    "dotenv": "^17.2.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
     "reset-css": "^5.0.2",
+    "sitemap": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:sitemap": "node generate-sitemap.js",
+    "build": "npm run generate:sitemap && vite build"
   },
   "eslintConfig": {
     "extends": [
