--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@mantine/tiptap": "^8.3.14",
+    "@monaco-editor/react": "^4.7.0",
     "@strapi/blocks-react-renderer": "^1.0.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
