--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tiptap/suggestion": "^3.18.0",
     "axios": "^1.13.4",
     "dotenv": "^17.2.3",
+    "prosemirror-state": "^1.4.4",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-helmet-async": "^2.0.5",
