--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-router-dom": "^7.13.0",
     "reset-css": "^5.0.2",
     "sitemap": "^9.0.0",
+    "swiper": "^12.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
